--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5",
     "react-scripts": "^3",
     "redux": "^4",
-    "redux-logger": "^3"
+    "redux-logger": "^3",
+    "reselect": "^4"
   },
   "scripts": {
     "start": "react-scripts start",
