--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^3",
     "redux": "^4",
     "redux-logger": "^3",
+    "redux-persist": "^6.0.0",
     "reselect": "^4"
   },
   "scripts": {
