--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5",
     "@testing-library/react": "^10",
     "@testing-library/user-event": "^10",
+    "dotenv": "^8",
     "firebase": "^7",
+    "prop-types": "^15",
     "react": "^16",
     "react-dom": "^16",
     "react-redux": "^7",
     "react-router-dom": "^5",
     "react-scripts": "^3",
+    "react-stripe-checkout": "^2",
     "redux": "^4",
     "redux-logger": "^3",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "^6",
     "reselect": "^4"
   },
   "scripts": {
