--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^4",
     "redux-logger": "^3",
     "redux-persist": "^6",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4"
   },
   "scripts": {
